--- a/package.json
+++ b/package.json
@@ -28,9 +28,11 @@
     "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "^0.9.0",
     "html-webpack-plugin": "^2.22.0",
+    "image-webpack-loader": "^3.3.1",
     "json-loader": "^0.5.4",
     "jsxhint": "^0.15.1",
     "koa": "^1.2.2",
+    "koa-core": "^1.0.8",
     "koa-cors": "^0.0.16",
     "koa-router": "^5.4.0",
     "less": "^2.7.1",
@@ -41,12 +43,13 @@
     "react-transform-hmr": "^1.0.4",
     "style-loader": "^0.13.1",
     "url-loader": "^0.5.7",
-    "webpack": "^1.13.2",
+    "webpack": "^1.15.0",
     "webpack-dev-server": "^1.15.0"
   },
   "dependencies": {
     "antd": "^2.11.2",
     "cesium": "^1.34.0",
+    "echarts": "^3.6.2",
     "echarts-liquidfill": "^1.0.5",
     "ejs": "^2.5.6",
     "es6-promise": "^3.2.1",
@@ -60,6 +63,7 @@
     "react-swipe": "^5.0.5",
     "react-three": "^0.9.7",
     "react-three-renderer": "^3.1.0",
+    "react-toggle-display": "^2.2.0",
     "redux": "^3.5.2",
     "swipe-js-iso": "^2.0.3",
     "three": "^0.84.0",
