--- a/package.json
+++ b/package.json
@@ -10,14 +10,21 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "autoprefixer": "^6.4.0",
-    "babel-core": "^6.14.0",
+    "antd": "^2.12.2",
+    "autoprefixer": "^6.7.7",
+    "babel-cli": "^6.24.1",
+    "babel-core": "^6.25.0",
     "babel-eslint": "^7.2.3",
-    "babel-loader": "^6.2.5",
+    "babel-loader": "^6.4.1",
     "babel-plugin-react-transform": "^2.0.2",
-    "babel-preset-es2015": "^6.14.0",
-    "babel-preset-react": "^6.11.1",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
+    "body-parser": "^1.17.2",
     "css-loader": "^0.24.0",
+    "echarts": "^3.6.2",
+    "echarts-liquidfill": "^1.0.5",
+    "ejs": "^2.5.6",
+    "es6-promise": "^3.3.1",
     "eslint": "^3.19.0",
     "eslint-config-airbnb": "^15.0.1",
     "eslint-loader": "^1.5.0",
@@ -25,44 +32,44 @@
     "eslint-plugin-jsx-a11y": "^6.0.2",
     "eslint-plugin-react": "^7.1.0",
     "eslint-plugin-redux-saga": "^0.4.0",
+    "express": "^4.15.3",
     "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "^0.9.0",
     "html-webpack-plugin": "^2.22.0",
     "json-loader": "^0.5.4",
     "jsxhint": "^0.15.1",
-    "koa": "^1.2.2",
-    "koa-cors": "^0.0.16",
-    "koa-router": "^5.4.0",
-    "less": "^2.7.1",
+    "koa": "^1.4.0",
+    "koa-cors": "0.0.16",
+    "koa-router": "^5.4.2",
+    "less": "^2.7.2",
     "less-loader": "^2.2.3",
     "open-browser-webpack-plugin": "0.0.2",
     "path": "^0.12.7",
-    "postcss-loader": "^0.11.0",
+    "postcss-loader": "^0.11.1",
+    "react": "^15.6.1",
+    "react-addons-pure-render-mixin": "^15.6.0",
+    "react-dom": "^15.6.1",
+    "react-router": "^2.8.1",
     "react-transform-hmr": "^1.0.4",
-    "style-loader": "^0.13.1",
-    "url-loader": "^0.5.7",
-    "webpack": "^1.13.2",
-    "webpack-dev-server": "^1.15.0"
+    "style-loader": "^0.13.2",
+    "url-loader": "^0.5.9",
+    "webpack": "^1.15.0",
+    "webpack-dev-middleware": "^1.11.0",
+    "webpack-dev-server": "^1.15.0",
+    "webpack-hot-middleware": "^2.18.2",
+    "whatwg-fetch": "^1.1.1"
   },
   "dependencies": {
-    "antd": "^2.11.2",
     "cesium": "^1.34.0",
-    "echarts-liquidfill": "^1.0.5",
-    "ejs": "^2.5.6",
-    "es6-promise": "^3.2.1",
     "immutable": "^3.8.1",
-    "react": "^15.3.2",
+    "postcss": "^6.0.8",
     "react-addons-css-transition-group": "^15.3.1",
-    "react-addons-pure-render-mixin": "^15.3.1",
-    "react-dom": "^15.3.1",
     "react-redux": "^4.4.8",
-    "react-router": "^2.7.0",
     "react-swipe": "^5.0.5",
     "react-three": "^0.9.7",
     "react-three-renderer": "^3.1.0",
     "redux": "^3.5.2",
     "swipe-js-iso": "^2.0.3",
-    "three": "^0.84.0",
-    "whatwg-fetch": "^1.0.0"
+    "three": "^0.84.0"
   }
 }
